--- a/.env
+++ b/.env
@@ -2,9 +2,9 @@
 AUTO_STATUS_SEEN=true
 REJECT_CALL=false
 MODE=public
-WELCOME=false
+WELCOME=true
 AUTO_READ=false
-AUTO_TYPING=false
+AUTO_TYPING=true
 AUTO_RECORDING=false
 ALWAYS_ONLINE=true
 AUTO_BLOCK=false
